<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/widget_budget_overview_preview_amount"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/total_budget"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/widget_budget_overview_preview_start"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="12sp" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="1"
            android:background="?android:attr/textColorSecondary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/colorPrimary"
            android:paddingHorizontal="8dp"
            android:paddingVertical="2dp"
            android:text="@string/widget_budget_overview_preview_days"
            android:textColor="?android:attr/colorBackground"
            android:textSize="11sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="1"
            android:background="?android:attr/textColorSecondary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/widget_budget_overview_preview_end"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>
